--- a/voiceCommand/index.html
+++ b/voiceCommand/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.sound.js"></script>
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.js"></script>
     <script src="libs/matrix.js"></script>
-    <script src="libs/NeuralNetwork.js"></script>
+    <script src="libs/voiceCommand.js"></script>
     <script src="example.js"></script>
     <style>
       body{
